cabal-version:       3.0

name:                Fibonacci
version:             0.14.0
synopsis:            Show Fibonacci index or sequence
description:         A simple Haskell project to generate Fibonacci numbers.
homepage:            https://gitlab.com/frankhjung1/haskell-fibonacci
license:             GPL-3.0-only
license-file:        LICENSE
author:              Frank H Jung
maintainer:          frankhjung@linux.com
copyright:           Copyright © 2017-2022 Frank H Jung
category:            education
build-type:          Simple
extra-source-files:  README.md

source-repository    head
  type:              git
  location:          https://github.com/frankhjung/haskell-fibonacci

library
  hs-source-dirs:    src
  exposed-modules:   Fibonacci
  default-language:  Haskell2010
  build-depends:     base >= 4 && < 5
                   , parallel >= 3.2.2.0 && < 3.3

executable fib
  hs-source-dirs:    app
                   , src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base
                   , parallel
                   , parseargs >= 0.2.0.9 && < 0.3
  other-modules:     Fibonacci
  ghc-options:       -threaded

test-suite test
  hs-source-dirs:    test
                   , src
  main-is:           Test.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , hspec >= 2.7.6 && < 2.9
                   , parallel
                   , QuickCheck >= 2.13.2 && < 2.15
  other-modules:     Fibonacci
  ghc-options:       -threaded

benchmark benchmark
  hs-source-dirs:    bench
                   , src
  main-is:           Bench.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , criterion >= 1.5.7.0 && < 1.6
                   , parallel
  other-modules:     Fibonacci
  ghc-options:       -threaded
