cabal-version:      3.0
name:               Fibonacci
version:            0.16.0
synopsis:           Show Fibonacci index or sequence
description:        A simple Haskell project to generate Fibonacci numbers.
homepage:           https://gitlab.com/frankhjung1/haskell-fibonacci
license:            GPL-3.0-only
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2017-2023 Frank H Jung
category:           education
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/frankhjung/haskell-fibonacci

library
  hs-source-dirs:   src
  exposed-modules:  Fibonacci
  default-language: Haskell2010
  build-depends:
    , base      ^>=4.17
    , parallel

executable fib
  hs-source-dirs:   app src
  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:    Fibonacci
  ghc-options:      -threaded
  build-depends:
    , base
    , parallel
    , parseargs

test-suite test
  hs-source-dirs:   test src
  main-is:          Test.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    Fibonacci
  ghc-options:      -threaded
  build-depends:
    , base
    , hspec
    , parallel
    , QuickCheck

benchmark benchmark
  hs-source-dirs:   bench src
  main-is:          Bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    Fibonacci
  ghc-options:      -threaded
  build-depends:
    , base
    , criterion
    , parallel
